argocd/app/ombi/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: ombi
    app.kubernetes.io/name: ombi
  name: ombi
spec:
  internalTrafficPolicy: Cluster
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 3579
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: ombi
    app.kubernetes.io/name: ombi
  type: ClusterIP
